# api-spec.yaml
@@ -8,11 +8,11 @@ servers:
 paths:
   /generatePDF:
     post:
-      operationId: UnitOfWork
+      operationId: generatePDF
       description:
-        Receives a payload containing Account, Contact, and Case details and uses the
+        Receives a payload containing Account, Contact, and Case details and uses puppteer and the
         Unit of Work pattern to assign the corresponding values to to its Record
-        while maintaining the relationships. It then commits the unit of work and
+        while maintaining the relationships. It then creates an attachement for the unit of work and
         returns the Record Id's for each object.
       requestBody:
         required: true
@@ -21,9 +21,8 @@ paths:
             schema:
               type: object
               properties:
-                objectId:
+                oId:
                   type: string
-              properties:
                 accountName:
                   type: string
                 lastName:
@@ -34,16 +33,16 @@ paths:
                   type: string
       responses:
         '201':
-          description: Received UnitOfWork API request
+          description: Received generatePDF API request
         '500':
           $ref: '#/components/responses/DeveloperError'
         '503':
           $ref: '#/components/responses/UnknownError'
       callbacks:
-        unitOfWorkResponse:
+        generatePDFResponse:
           '{$request.body#/callbackUrl}':
             post:
-              description: Response from /unitofwork API
+              description: Response from /generatePDF API
               operationId: generatePDFResponseHandler
               requestBody:
                 content:
